# python-practice

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE.md  README.md  bootstrap-git.sh  buildspec.yml  mypy.ini  poetry.toml  pyproject.toml  pytest-config.ini  pytest.ini  tox.ini
.github/workflows/: main.yml
docs/: python-collections.docx
docs/mypkg/: index.html  logger.html
docs/mypkg/graph/: graph.html  index.html  search.html  union_find.html
docs/mypkg/linkedlist/: doubly_linkedlist.html  index.html  lru_cache.html  singly_linkedlist.html
docs/mypkg/misc/: bit_manipulation.html  heap.html  index.html  stack_queue.html
docs/mypkg/recursion/: fibonacci.html  index.html  pow.html
docs/mypkg/search/: binary_search.html  index.html
docs/mypkg/sort/: heap_sort.html  index.html  insertion_sort.html  merge_sort.html  quick_sort.html
docs/mypkg/tree/: bst.html  index.html  tree_node.html
notebooks/: ml-libs.ipynb  python-design.ipynb  python-ds.ipynb  python-helper.ipynb  python-oop.ipynb
src/experiment/: __init__.py
src/misc/: __init__.py
src/misc/console/: __init__.py  application.py
src/mypkg/: __init__.py  logger.py
src/mypkg/comp/: microsoft.py
src/mypkg/company/: __init__.py
src/mypkg/graph/: __init__.py  graph.py  search.py  union_find.py
src/mypkg/linkedlist/: __init__.py  doubly_linkedlist.py  lru_cache.py  singly_linkedlist.py
src/mypkg/misc/: bit_manipulation.py  heap.py  max_stack.py  stack_queue.py  tic_tac_toe.py  union_find.py
src/mypkg/recursion/: __init__.py  fibonacci.py  pow.py
src/mypkg/search/: __init__.py  binary_search.py
src/mypkg/sort/: heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py
src/mypkg/string/: __init__.py  encode_decode.py  sliding_window.py  substring-replace.py  substring_replace.py
src/mypkg/tree/: bst.py  tree_node.py
src/search/: binary_search.py
src/sort/: insertion_sort.py
tests/: __init__.py  conftest.py  leet_code.py  my_code.py  test_binary_search.py  test_bit_manipulation.py  test_bst.py  test_fibonacci.py  test_graph.py  test_heap.py  test_linkedlist.py  test_lru_cache.py  test_misc.py  test_pow.py  test_sort.py  test_stack_queue.py  test_union_find.py
tests/mypkg/comp/: test_microsoft.py
tests/mypkg/company/: test_microsoft.py
tests/mypkg/graph/: test_graph.py  test_union_find.py
tests/mypkg/linkedlist/: test_linkedlist.py  test_lru_cache.py
tests/mypkg/misc/: test_heap.py  test_tic_tac_toe.py
tests/mypkg/recursion/: test_pow.py
tests/mypkg/search/: test_binary_search.py
tests/mypkg/string/: test_sliding_window.py
tests/mypkg/tree/: test_bst.py
(+3 files in other folders)
