[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "misc"
version = "0.1.0"
description = "Python Practice Code"
packages = [
    { include = "misc", from = "src/" },
]
authors = ["Mokarrom Hossain <mokarrom.hossain@tr.com>"]
license = "Proprietary"
readme = "README.md"
homepage = "https://thehub.thomsonreuters.com/groups/misc"
repository = "https://github.com/mokarrom/python-practice"
documentation = "python-practice/docs"
keywords = ["labs"]
# Add relevant classifiers from https://pypi.org/classifiers/
# poetry adds "Programming Language :: Python :: 3", etc. by default, so those can be skipped.
classifiers = [

]

[tool.poetry.scripts]
misc = "misc.console.application:main"

[tool.poetry.dependencies]
python = "~3.8"
cleo = "^0.8.1"
tox = "^3.23.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.8.0"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-html = "^2.1.1"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
mockito = "==1.1.1"
black = { version = "^19.10b0", allow-prereleases = true }
mypy = "^0.782"
pre-commit = "^2.4.0"
pdoc3 = "^0.8.4"
importlib-metadata = {version = "3.7.0", markers = "python_version < \"3.8\""}

[[tool.poetry.source]]
# https://python-poetry.org/docs/repositories/
# https://thehub.thomsonreuters.com/docs/DOC-2517222#jive_content_id_Using_pip
# NOTE: poetry search doesn't work with private repos but you can use pip search, then poetry add|install
name = "tr"
url = "https://pypi.org/"
default = true

[tool.black]
# See other configurations available at https://pypi.org/project/black/
line-length = 120
target-version = ['py38']  # TODO

[tool.poe.tasks]
precommit-checks = "pre-commit run --all-files"
test = ["precommit-checks", "pytest"]
pytest = "pytest -s -c pytest-config.ini --cache-clear --junitxml=htmlcov/pytest_junit.xml --html=htmlcov/pytest.html --self-contained-html --cov-report=html:htmlcov/coverage_html --cov-report=xml:htmlcov/coverage.xml"
build-docs = "pdoc --html src/misc -o docs/ --force"
host-local-docs = "pdoc src/misc --http localhost:7999"
build-wheel = "poetry build --format wheel"  # sdist is outdated and typically unnecessary.
#publish = "poetry publish --repository tr"
release = ["generate-docs", "build-wheel", "publish"]

[tool.poe.tasks.clean]
default_item_type = "script"
ignore_fail = true
sequence = [
    "os:remove('.coverage')",
    "shutil:rmtree('dist')",
    "shutil:rmtree('.mypy_cache')",
    "shutil:rmtree('.pytest_cache')",
    "shutil:rmtree('htmlcov')",
    "shutil:rmtree('docs/misc')",
]
